fix: SWP-1039  Menu is broken in Publisher Client in Output Settings

--- a/client/styles/helperElements.scss
+++ b/client/styles/helperElements.scss
@@ -53,6 +53,10 @@
     margin-bottom: .5em;
 }
 
+.removeContentPadding {
+    margin: -2rem;
+}
+
 .countLabel {
     display: inline-block;
     background-color: #90bccf;
